--- a/.github/workflows/build-android12-5.10.yml
+++ b/.github/workflows/build-android12-5.10.yml
@@ -12,8 +12,8 @@ jobs:
   build:
     permissions:
       contents: write
+    runs-on: ubuntu-22.04
     name: BUILD ANDROID12-5.10
-    runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
       CCACHE_COMPILERCHECK: "%compiler% -dumpmachine; %compiler% -dumpversion"
